--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body .container .item form {
 }
 
 body .container input {
-  width: 356px;
+  width: 100%;
   height: 60px;
   border: none;
   font-size: 30px;
