--- a/styles.scss
+++ b/styles.scss
@@ -32,7 +32,7 @@ body {
     }
 
     input {
-      width: 356px;
+      width: 100%;
       height: 60px;
       border: none;
       font-size: 30px;
